--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,41 @@
 /*  your css code here. If applicable */
+
+h1{
+	text-align: self-start;
+}
+.playerNames{
+	width: 50%;
+	display:flex;
+	flex-direction:column;
+	row-gap:10px;
+	padding:10px;
+}
+
+.playerlabel{
+	display:flex;
+	column-gap:10px;
+}
+.formPage input{
+	padding:5px;	
+}
+
+.btn{
+	margin:10px 20px;
+	 width: 230px;
+	padding: 10px;
+	border-radius: 5px;
+}
+	
+.grid-container{
+	display: grid;
+	grid-template-columns: repeat(3,12%);
+	grid-gap:0px;
+/* 	display : none; */
+}
+
+.item{
+	width:100px;
+	height:100px;
+	background-color:hotpink;
+	border : 5px solid black;
+}
